# devpulse-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  cert.pem  docker-compose.dev.yaml  docker-compose.yaml  package-lock.json  private.key
.githooks/: pre-push
.sqlx/: query-06329de6cde75c96afee1cfbbd0aac759d49775ddca2f3c4b36390d573ac47f9.json  query-0a6580cccb17fa2e236af172664e30fd5863a9d6ee5d87ca3fd7246717533944.json  query-0d771571396d29c32e95b14113843f6fae044bf96d87b3937deaa7a351b6d577.json  query-19974e312a86d5bfd63339d9bbe8bab4a6c3026aa005d206a49ac8adc4757301.json  query-1ad90d9f194c2475965094ccfe039fe20d4f8021b3e028f7190be893c510a34b.json  query-1da6d0ffa708c114bcebf05f233245cc740ac861ec87a737572c465c7e562642.json  query-2f9ade6121e6e600a678be7ffba9063893875e47d32effaee82d0909b069f529.json  query-30303a18f4ddb128a1b126311cebb045cdfb7cce62afaddb363c6714fd1175cd.json  query-357d66bca2147bf37cadc2df5d00dc313644d3d647d63154ad373c616a413588.json  query-3bf61fbb2bd64710e4d084f8f891205e5018f04daf03502a5bd6d649a2853e2d.json  query-43f53edceecc9a20c63ba0584bcb56cc7fd24ae30fd4080962a061d6ff325377.json  query-49634cf46e6f4e9711380217c9257ada2c281c85f7f55a0292bfdb673e0c73af.json  query-4a22918aaf8591e233efbcff561ead59fbafe40a90b41ecaf53e261f4e3ee7ab.json  query-4bfd39f99003d7e1825efcf3a9503d697b3605663197269ba3555db3f88aa91d.json  query-4d55211a76a67829a318126f2346ae7cd7b030638c43048707050639d3313910.json  query-51f510dd1593442cb09d8e2311260e8a7010185650adafb433f1f9f9d0d245d1.json  (+36 more)
dashboard/: package-lock.json  package.json  vite.config.js
(+46 files in other folders)
