[package]
name    = "devpulse-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum              = { version = "0.8", features = ["ws"] }
tokio             = { version = "1", features = ["full"] }
tower             = "0.5"
tower-http        = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"

# Database
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "migrate",
    "uuid",
    "chrono"
]}

# Redis
deadpool-redis    = "0.18"

# Utilities
uuid              = { version = "1", features = ["v4", "serde"] }
chrono            = { version = "0.4", features = ["serde"] }
dotenvy           = "0.15"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
md5 = "0.7"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"

include_dir = "0.7"
